# RUMAD_2.0_F25

./: README.md  RUMAD 2.0 Fall25 APIs.postman_collection.json  create_tables.sql  main.py  pyproject.toml  requirements.txt
API/: main.py
API/config/: pgconfig.py
API/dao/: classes.py  meeting.py  requisite.py  room.py  section.py  stats.py  syllabus.py  user.py
API/handlers/: chatbot.py  classes.py  meeting.py  requisite.py  room.py  section.py  stats.py  syllabus.py  user.py
Chatbot/: chatbot.py  main.py
Chatbot/Navigation/: avg_meeting_time.py  class_without_prereqs.py  multi_room_classes.py  sections_by_day.py  sign_in.py  top_departments.py  top_rooms.py
Chatbot/llm/: chatbot_for_Collection.py  chatollama.py  filehandler.py
reload/: db.py  drop_tables.py  load_tables.py  reload_db.py
